fix left red bar align fix loader error

--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -26,7 +26,7 @@
 
 .ui.labeled.left.inline.vertical.sidebar.menu {
   padding-top: 50px;
-  width: 68px;
+  width: 4.2rem;
   z-index: 10;
 }
 
